# project-t-app

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
backend/: .env.example  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 4ca671e03d32_add_shoebox_item_table.py  5303830a104c_add_workspace_table_and_workspace_id_fk.py  9fb974d519e3_add_source_document_table.py  a1b2c3d4e5f6_replace_sources_with_sql_table.py  a8b9c0d1e2f3_add_chart_spec_to_shoebox_item.py  b510097217cd_empty_baseline.py  b7c8d9e0f1a2_add_evidence_item_table.py  c3d4e5f6a7b8_add_ai_authored_to_evidence_item.py  d5e6f7a8b9c0_add_approved_rejected_to_evidence.py  e6f7a8b9c0d1_add_schematization_table.py  f7a8b9c0d1e2_add_ai_authored_to_shoebox_item.py  g8a9b0c1d2e3_add_story_table.py
backend/app/: database.py  main.py  settings.py
backend/app/ai/: __init__.py  build_case.py  orchestrator.py  read_and_extract.py  search_and_query.py  tell_story.py
backend/app/auth/: dependency.py  router.py  service.py
backend/app/evidence/: models.py  router.py  service.py
backend/app/schematization/: models.py  router.py  service.py
backend/app/shoebox/: models.py  router.py  service.py
backend/app/sources/: models.py  router.py  service.py
backend/app/story/: models.py  router.py  service.py
backend/app/workspaces/: models.py  router.py  service.py
backend/tests/: conftest.py  test_health.py
backend/tests/ai/: test_build_case.py  test_orchestrator.py  test_read_and_extract.py  test_search_and_query.py  test_tell_story.py
webapp/: README.md  (+4 more)
(+42 files in other folders)
